[package]
name = "gpui_transitions"
version = "0.1.1"
authors = [ "cameronpcampbell" ]
edition = "2024"
description = "provides an API for interpolating between values in GPUI."
license = "MIT"
homepage = "https://github.com/astrum-chat/gpui_transitions"

[dependencies]
gpui = "0.2.2"

[dev-dependencies]
smallvec = "1.15.1"
palette = "0.7.6"
rand = "0.9.2"

[features]
default = []
transition_element = []
